# castle-wyvern

./: .bandit  .env.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DOC_REVIEW.md  IMPLEMENTATION_PLAN.md  LICENSE  PERFORMANCE.md  PROMPT.md  QUICKSTART.md  README.md  SECURITY_FIXES_2026-02-16.md  TESTING.md  TUTORIAL_Knowledge_Graph.md  TUTORIAL_Visual_Automation.md  USER_GUIDE.md  castle_wyvern_cli.py  clan_wyvern.py  install.sh  mcp_config.json  pyproject.toml  ralph_loop.sh  requirements.txt  run_ci_locally.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  question.yml
.github/workflows/: cd.yml  ci.yml
bmad/: README.md  bmad_workflow.py
bmad/agents/: broadway_chronicler.md  bronx_monitor.md  brooklyn_architect.md  demona_failsafe.md  lexington_builder.md  xanatos_redteam.md
bmad/commands/: code_review.py  dev_story.py  product_brief.py  quick_spec.py
bmad/templates/: architecture_template.md  prd_template.md  story_template.md
bmad/workflows/: analyze_phase.md  build_phase.md  deploy_phase.md  measure_phase.md
docs/: api-examples.md  architecture.md  cli_research.md  launch_post_hackernews.md  launch_post_reddit.md  openclaw.md  roadmap.md  troubleshooting.md
docs/features/: README.md  agent-coordination.md  browser-agent.md  clan-creation.md  docker-sandbox.md  enhanced-memory.md  extended-nodes.md  goal-agent.md  knowledge-graph.md  mcp-a2a.md  visual-automation.md  visual-workflows.md
eyrie/: a2a_protocol.py  advanced_ai.py  agent_coordination.py  agent_coordination_utils.py  api_server.py  auto_discovery.py  browser_agent.py  clan_backstories.py  clan_creator.py  cli_enhancements.py  cli_improvements.py  docker_sandbox.py  document_ingestion.py  documentation.py  enhanced_memory.py  error_handler.py  function_builder.py  goal_agent.py  heartbeat.json  integrations.py  intent_router.py  knowledge_graph.py  knowledge_graph_utils.py  llama_cpp_client.py  logging_config.py  mcp_server.py  monitoring.py  nanogpt_integration.py  node_manager.py  omni_parser.py  performance.py  phoenix_gate.py  plugin_system.py  security.py  sentinel_ping.py  truth_enforcement_mcp.py  truth_enforcement_wrapper.py  visual_automation_utils.py  web_dashboard.py  workflow_builder.py  (+1 more)
eyrie/grimoorum/documents/: chunks.json  documents.json
eyrie/grimoorum/nodes/: nodes.json  tasks.json
grimoorum/: first_awakening.md  memory_manager.py
grimoorum/grimoorum/: clan_memory_v2.json
grimoorum/nodes/: nodes.json
implementations/: FINAL_COMPLETE_implementation.md  latest_implementation.md  latest_implementation_FIXED.md
plugins/example_plugin/: manifest.json  plugin.py
products/: brief_AI-powered_personal_.md
prompts/: broadway_system.md  bronx_system.md  brooklyn_system.md  demona_system.md  elisa_system.md  goliath_system.md  hudson_system.md  lexington_system.md  xanatos_system.md
reviews/: latest_review.md
specs/: quick_spec_Add_a_password_reset_feature_t.md
tests/: quick_test.py  test_agent_coordination.py  test_api_server.py  test_castle_wyvern.py  test_knowledge_graph.py  test_plugin_system.py  test_security.py  test_visual_automation.py
